--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.546.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
@@ -54,6 +55,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
     "react-is": "^19.2.0",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0",
@@ -66,6 +68,7 @@
   "devDependencies": {
     "@eslint/js": "^9.38.0",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^24.8.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
